--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
